--- a/index.html
+++ b/index.html
@@ -4,80 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>odr*anywere</title>
-  <style>
-    :root {
-      --white: #ffffff;
-      --gray-light: #b2b2b2;
-      --gray: #666666;
-      --black: #121212;
-    }
-
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background-color: var(--black);
-      color: var(--white);
-    }
-
-    /* Intro Page */
-    #intro {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: var(--black);
-      cursor: pointer;
-      transition: opacity 0.5s;
-    }
-
-    #intro h1 {
-      font-size: 3rem;
-      color: var(--gray-light);
-    }
-
-    /* Header */
-    header {
-      display: flex;
-      justify-content: space-between;
-      padding: 1rem;
-      background-color: var(--black);
-      border-bottom: 1px solid var(--gray);
-    }
-
-    .nav-left, .nav-right {
-      display: flex;
-      gap: 2rem;
-    }
-
-    a {
-      color: var(--gray-light);
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    a:hover {
-      color: var(--white);
-    }
-
-    /* Main Grid */
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 2rem;
-      padding: 2rem;
-    }
-
-    .product-card {
-      background-color: var(--gray);
-      height: 400px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: var(--white);
-      font-size: 1.5rem;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -107,15 +34,6 @@
     </section>
   </div>
 
-  <script>
-    function enterSite() {
-      document.getElementById('intro').style.opacity = 0;
-      setTimeout(() => {
-        document.getElementById('intro').style.display = 'none';
-        document.getElementById('main').style.display = 'block';
-      }, 500);
-    }
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
