Update intro page index.html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>odr*anywere</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <!-- Intro Page -->
   <div id="intro" onclick="enterSite()">
     <h1>ENTER odr*anywere</h1>
   </div>
 
   <!-- Main Content -->
-  <div id="main" style="display:none">
+  <div id="main" style="display: none">
     <header>
       <div class="nav-left">
         <a href="#">TOP</a>
