--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>odr*anywere</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Intro Page -->
@@ -12,36 +12,63 @@
     <h1>odr*anywhere</h1>
   </div>
 
-  <!-- Main Content -->
+  <!-- Main -->
   <div id="main" style="display: none">
     <header>
       <div class="nav-left">
-        <a href="#top">TOP</a>
-        <a href="#about" onclick="showPage('about')">ABOUT</a>
+        <a href="#" onclick="showPage('top')">TOP</a>
+        <a href="#" onclick="showPage('about')">ABOUT</a>
       </div>
       <div class="nav-right">
-        <a href="#account" onclick="showPage('account')">ACCOUNT</a>
-        <a href="#cart" onclick="showPage('cart')">CART</a>
+        <a href="#" onclick="showPage('account')">ACCOUNT</a>
+        <a href="#" onclick="showPage('cart')">CART</a>
       </div>
     </header>
 
-    <section id="home" class="page">
+    <!-- TOP -->
+    <section id="top" class="page">
+      <div class="banner">[배너 이미지 자리]</div>
       <div class="product-grid">
         <div class="product-card">Product 1</div>
         <div class="product-card">Product 2</div>
         <div class="product-card">Product 3</div>
         <div class="product-card">Product 4</div>
+        <div class="product-card">Product 5</div>
+        <div class="product-card">Product 6</div>
+        <div class="product-card">Product 7</div>
+        <div class="product-card">Product 8</div>
+        <div class="product-card">Product 9</div>
+        <div class="product-card">Product 10</div>
       </div>
     </section>
 
-    <section id="about" class="page" style="display:none">
+    <!-- ABOUT -->
+    <section id="about" class="page" style="display: none;">
       <div class="placeholder">ABOUT PAGE</div>
     </section>
-    <section id="account" class="page" style="display:none">
-      <div class="placeholder">ACCOUNT PAGE</div>
+
+    <!-- ACCOUNT -->
+    <section id="account" class="page" style="display: none;">
+      <div class="login-box">
+        <h2>LOGIN</h2>
+        <p>Enter your email and password to login:</p>
+        <input type="email" placeholder="E-mail" />
+        <div class="password-wrap">
+          <input type="password" placeholder="Password" />
+          <a href="#">Forgot your password?</a>
+        </div>
+        <button>LOGIN</button>
+        <p class="signup">Don't have an account?<br /><a href="#">Sign up</a></p>
+      </div>
     </section>
-    <section id="cart" class="page" style="display:none">
-      <div class="placeholder">CART PAGE</div>
+
+    <!-- CART -->
+    <section id="cart" class="page" style="display: none;">
+      <div class="cart-box">
+        <h2>CART</h2>
+        <p>Your cart is empty</p>
+        <button>SHOP OUR PRODUCTS</button>
+      </div>
     </section>
   </div>
 
