--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>odr*anywere</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      cursor: url('cursor.png'), auto;
+    }
+  </style>
 </head>
 <body>
-  <!-- Intro Page (Video Background) -->
-  <div id="intro" onclick="enterSite()">
-    <video autoplay muted loop id="introVideo">
-      <source src="logo animation.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
+  <!-- Intro Page (90% Scaled Video with Black Background) -->
+  <div id="intro">
+    <div class="intro-video-wrapper">
+      <video autoplay muted id="introVideo">
+        <source src="logo animation.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+    </div>
   </div>
 
   <!-- Main -->
@@ -35,16 +42,16 @@
         <img src="banner.jpg" alt="banner" class="banner-image" />
       </div>
       <div class="product-grid">
-        <div class="product-card">Product 1</div>
-        <div class="product-card">Product 2</div>
-        <div class="product-card">Product 3</div>
-        <div class="product-card">Product 4</div>
-        <div class="product-card">Product 5</div>
-        <div class="product-card">Product 6</div>
-        <div class="product-card">Product 7</div>
-        <div class="product-card">Product 8</div>
-        <div class="product-card">Product 9</div>
-        <div class="product-card">Product 10</div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
+        <div class="product-card"><img src="frame_product.png" alt="product" /></div>
       </div>
     </section>
 
