--- a/index.html
+++ b/index.html
@@ -55,8 +55,52 @@
       </div>
     </section>
 
-    <!-- ABOUT / ACCOUNT / CART 영역은 동일하게 유지 -->
+    <!-- ABOUT -->
+    <section id="about" class="page" style="display: none;">
+      <div class="about-hero">
+        <img src="about-hero.jpg" alt="about hero" class="banner-image" />
+      </div>
+      <div class="about-content">
+        <h3>CONCEPT</h3>
+        <h1>LEAP GRAVITY</h1>
+        <p>
+          Through shoes, we will bring about a new way of communication with the earth.<br><br>
+          Through shoes, we will make people more aware of the time-gravity link and
+          make them dream of their connection to higher dimensions.<br><br>
+          By making a shoe where the sole-itself is connected to the earth,
+          with a shape fit for going for a stroll, the burden of walking is lifted.<br><br>
+          The transparent soles of the shoes will have you feeling as if you are walking on air.
+          With a shape that delivers a punch, feel your consciousness flow
+          through the soles of your shoes.<br><br>
+          Pursuing weightlessness and losing consciousness of what's on your feet is not a thing of the future.
+          By utilizing shape, we want to evolve the consciousness of humans and gravity through comfort.
+        </p>
+      </div>
+    </section>
 
+    <!-- ACCOUNT -->
+    <section id="account" class="page" style="display: none;">
+      <div class="login-box">
+        <h2>LOGIN</h2>
+        <p>Enter your email and password to login:</p>
+        <input type="email" placeholder="E-mail" />
+        <div class="password-wrap">
+          <input type="password" placeholder="Password" />
+          <a href="#">Forgot your password?</a>
+        </div>
+        <button>LOGIN</button>
+        <p class="signup">Don't have an account?<br /><a href="#">Sign up</a></p>
+      </div>
+    </section>
+
+    <!-- CART -->
+    <section id="cart" class="page" style="display: none;">
+      <div class="cart-box">
+        <h2>CART</h2>
+        <p>Your cart is empty</p>
+        <button>SHOP OUR PRODUCTS</button>
+      </div>
+    </section>
   </div>
 
   <script src="script.js" defer></script>
