--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     body {
       cursor: url('cursor.cur'), auto;
     }
+    .about-content h3 {
+      color: #666666;
+    }
+    .about-content .ko {
+      color: #000000;
+      margin-top: 2rem;
+      line-height: 1.8;
+    }
+    .about-content .en {
+      color: #b2b2b2;
+      margin-top: 2rem;
+      line-height: 1.8;
+    }
   </style>
 </head>
 <body>
@@ -63,17 +76,17 @@
       <div class="about-content">
         <h3>CONCEPT</h3>
         <h1>LEAP GRAVITY</h1>
-        <p>
-          Through shoes, we will bring about a new way of communication with the earth.<br><br>
-          Through shoes, we will make people more aware of the time-gravity link and
-          make them dream of their connection to higher dimensions.<br><br>
-          By making a shoe where the sole-itself is connected to the earth,
-          with a shape fit for going for a stroll, the burden of walking is lifted.<br><br>
-          The transparent soles of the shoes will have you feeling as if you are walking on air.
-          With a shape that delivers a punch, feel your consciousness flow
-          through the soles of your shoes.<br><br>
-          Pursuing weightlessness and losing consciousness of what's on your feet is not a thing of the future.
-          By utilizing shape, we want to evolve the consciousness of humans and gravity through comfort.
+        <p class="ko">
+          ODR*는 “좋은 신발은 좋은 곳으로 데려다준다”는 믿음 아래,<br>
+          로컬의 특색을 현대적인 감각으로 재해석한 리미티드 슈즈 컬렉션을 선보입니다.<br>
+          신발은 단순한 소비를 넘어, 공간과 경험을 걷는 방식으로 확장됩니다.<br><br>
+          ODR*와 함께, 자유로운 당신은 어디로든 떠날 수 있습니다.
+        </p>
+        <p class="en">
+          ODR* is founded on the belief that good shoes take you good places.<br>
+          We present limited-edition footwear inspired by local identity, reimagined through a modern lens.<br>
+          Each pair moves beyond product—becoming a way to walk through space and story.<br><br>
+          With ODR*, your freedom finds its direction.
         </p>
       </div>
     </section>
