--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       margin-top: 2rem;
       line-height: 1.8;
     }
+    .about-logo {
+      max-width: 320px;
+      margin: 1.5rem auto;
+      display: block;
+    }
   </style>
 </head>
 <body>
@@ -75,7 +80,7 @@
       </div>
       <div class="about-content">
         <h3>CONCEPT</h3>
-        <h1>LEAP GRAVITY</h1>
+        <img src="logo-intro.png" alt="LEAP GRAVITY logo" class="about-logo" />
         <p class="ko">
           ODR*는 “좋은 신발은 좋은 곳으로 데려다준다”는 믿음 아래,<br>
           로컬의 특색을 현대적인 감각으로 재해석한 리미티드 슈즈 컬렉션을 선보입니다.<br>
