--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           ODR* is founded on the belief that good shoes take you good places.<br>
           We present limited-edition footwear inspired by local identity, reimagined through a modern lens.<br>
           Each pair moves beyond product—becoming a way to walk through space and story.<br><br>
-          With ODR*, your freedom finds its direction.
+          With ODR*, your freedom takes you anywhere.
         </p>
       </div>
     </section>
