--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>odr*anywere</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css" />
   <style>
     body {
       cursor: url('cursor.cur'), auto;
+      font-family: 'Pretendard Variable', sans-serif;
     }
     .about-content h3 {
       color: #666666;
@@ -26,6 +28,20 @@
       max-width: 320px;
       margin: 1.5rem auto;
       display: block;
+    }
+    .product-card img {
+      width: 100%;
+      max-width: 300px;
+      height: auto;
+      display: block;
+      -webkit-mask-image: url('frame_product.png');
+      -webkit-mask-repeat: no-repeat;
+      -webkit-mask-size: contain;
+      -webkit-mask-position: center;
+      mask-image: url('frame_product.png');
+      mask-repeat: no-repeat;
+      mask-size: contain;
+      mask-position: center;
     }
   </style>
 </head>
@@ -60,16 +76,16 @@
         <img src="banner.jpg" alt="banner" class="banner-image" />
       </div>
       <div class="product-grid">
-        <div class="product-card"><img src="frame_product.png" alt="product 1" /></div>
-        <div class="product-card"><img src="frame_product.png" alt="product 2" /></div>
-        <div class="product-card"><img src="frame_product.png" alt="product 3" /></div>
-        <div class="product-card"><img src="frame_product.png" alt="product 4" /></div>
-        <div class="product-card"><img src="frame_product.png" alt="product 5" /></div>
-        <div class="product-card"><img src="frame_product.png" alt="product 6" /></div>
-        <div class="product-card"><img src="frame_product.png" alt="product 7" /></div>
-        <div class="product-card"><img src="frame_product.png" alt="product 8" /></div>
-        <div class="product-card"><img src="frame_product.png" alt="product 9" /></div>
-        <div class="product-card"><img src="frame_product.png" alt="product 10" /></div>
+        <div class="product-card"><img src="1_수상가옥_로고합성.jpeg" alt="product 1" /></div>
+        <div class="product-card"><img src="1_영국_로고합성.jpeg" alt="product 2" /></div>
+        <div class="product-card"><img src="1_우유니_로고합성.jpeg" alt="product 3" /></div>
+        <div class="product-card"><img src="1_이탈리아_로고합성.jpeg" alt="product 4" /></div>
+        <div class="product-card"><img src="1_일본_로고합성.jpeg" alt="product 5" /></div>
+        <div class="product-card"><img src="1_제주_로고합성.jpg" alt="product 6" /></div>
+        <div class="product-card"><img src="1_파리_로고합성.jpeg" alt="product 7" /></div>
+        <div class="product-card"><img src="1_페루_로고합성.jpeg" alt="product 8" /></div>
+        <div class="product-card"><img src="1_플로리다_로고합성.jpg" alt="product 9" /></div>
+        <div class="product-card"><img src="1_하와이_로고합성.jpg" alt="product 10" /></div>
       </div>
     </section>
 
