--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>odr*anywere</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css" />
   <style>
     body {
@@ -50,7 +50,7 @@
   <div id="intro" style="transition: opacity 1s ease;">
     <div class="intro-video-wrapper">
       <video id="introVideo">
-        <source src="logo animation.mp4" type="video/mp4" />
+        <source src="logo animation.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
@@ -63,7 +63,7 @@
         <a href="#" onclick="showPage('top')">TOP</a>
         <a href="#" onclick="showPage('about')">ABOUT</a>
       </nav>
-      <img src="logo-main.png" alt="odr logo" class="logo-center" onclick="showPage('top')" />
+      <img src="logo-main.png" alt="odr logo" class="logo-center" onclick="showPage('top')">
       <nav class="nav-right">
         <a href="#" onclick="showPage('account')">ACCOUNT</a>
         <a href="#" onclick="showPage('cart')">CART</a>
@@ -73,30 +73,30 @@
     <!-- TOP -->
     <section id="top" class="page">
       <div class="banner">
-        <img src="banner.jpg" alt="banner" class="banner-image" />
+        <img src="banner.jpg" alt="banner" class="banner-image">
       </div>
       <div class="product-grid">
-        <div class="product-card"><img src="1_수상가옥_로고합성.jpeg" alt="product 1" /></div>
-        <div class="product-card"><img src="1_영국_로고합성.jpeg" alt="product 2" /></div>
-        <div class="product-card"><img src="1_우유니_로고합성.jpeg" alt="product 3" /></div>
-        <div class="product-card"><img src="1_이탈리아_로고합성.jpeg" alt="product 4" /></div>
-        <div class="product-card"><img src="1_일본_로고합성.jpeg" alt="product 5" /></div>
-        <div class="product-card"><img src="1_제주_로고합성.jpg" alt="product 6" /></div>
-        <div class="product-card"><img src="1_파리_로고합성.jpeg" alt="product 7" /></div>
-        <div class="product-card"><img src="1_페루_로고합성.jpeg" alt="product 8" /></div>
-        <div class="product-card"><img src="1_플로리다_로고합성.jpg" alt="product 9" /></div>
-        <div class="product-card"><img src="1_하와이_로고합성.jpg" alt="product 10" /></div>
+        <div class="product-card"><img src="1_수상가옥_로고합성.jpeg" alt="product 1"></div>
+        <div class="product-card"><img src="1_영국_로고합성.jpeg" alt="product 2"></div>
+        <div class="product-card"><img src="1_우유니_로고합성.jpeg" alt="product 3"></div>
+        <div class="product-card"><img src="1_이탈리아_로고합성.jpeg" alt="product 4"></div>
+        <div class="product-card"><img src="1_일본_로고합성.jpeg" alt="product 5"></div>
+        <div class="product-card"><img src="1_제주_로고합성.jpg" alt="product 6"></div>
+        <div class="product-card"><img src="1_파리_로고합성.jpeg" alt="product 7"></div>
+        <div class="product-card"><img src="1_페루_로고합성.jpeg" alt="product 8"></div>
+        <div class="product-card"><img src="1_플로리다_로고합성.jpg" alt="product 9"></div>
+        <div class="product-card"><img src="1_하와이_로고합성.jpg" alt="product 10"></div>
       </div>
     </section>
 
     <!-- ABOUT -->
     <section id="about" class="page" style="display: none;">
       <div class="about-hero">
-        <img src="about-hero.jpg" alt="about hero" class="banner-image" />
+        <img src="about-hero.jpg" alt="about hero" class="banner-image">
       </div>
       <div class="about-content">
         <h3>CONCEPT</h3>
-        <img src="logo-intro.png" alt="LEAP GRAVITY logo" class="about-logo" />
+        <img src="logo-intro.png" alt="LEAP GRAVITY logo" class="about-logo">
         <p class="ko">
           ODR*는 “좋은 신발은 좋은 곳으로 데려다준다”는 믿음 아래,<br>
           로컬의 특색을 현대적인 감각으로 재해석한 리미티드 슈즈 컬렉션을 선보입니다.<br>
@@ -117,13 +117,13 @@
       <div class="login-box">
         <h2>LOGIN</h2>
         <p>Enter your email and password to login:</p>
-        <input type="email" placeholder="E-mail" />
+        <input type="email" placeholder="E-mail">
         <div class="password-wrap">
-          <input type="password" placeholder="Password" />
+          <input type="password" placeholder="Password">
           <a href="#">Forgot your password?</a>
         </div>
         <button>LOGIN</button>
-        <p class="signup">Don't have an account?<br /><a href="#">Sign up</a></p>
+        <p class="signup">Don't have an account?<br><a href="#">Sign up</a></p>
       </div>
     </section>
 
