--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <svg width="0" height="0">
     <defs>
       <clipPath id="clip-product" clipPathUnits="objectBoundingBox">
-        <!-- 원을 x축으로 shear하여 타원형 형태로 만든 경로 -->
         <path d="M0.5,0 C0.75,0,1,0.25,1,0.5 C1,0.75,0.75,1,0.5,1 C0.25,1,0,0.75,0,0.5 C0,0.25,0.25,0,0.5,0 Z" transform="matrix(1,0,0.25,1,0,0)"/>
       </clipPath>
     </defs>
@@ -48,16 +47,36 @@
         <img src="banner.jpg" alt="banner" class="banner-image">
       </div>
       <div class="product-grid">
-        <div class="product-card"><img src="1_수상가옥_로고합성.jpeg" alt="product 1"></div>
-        <div class="product-card"><img src="1_영국_로고합성.jpeg" alt="product 2"></div>
-        <div class="product-card"><img src="1_우유니_로고합성.jpeg" alt="product 3"></div>
-        <div class="product-card"><img src="1_이탈리아_로고합성.jpeg" alt="product 4"></div>
-        <div class="product-card"><img src="1_일본_로고합성.jpeg" alt="product 5"></div>
-        <div class="product-card"><img src="1_제주_로고합성.jpg" alt="product 6"></div>
-        <div class="product-card"><img src="1_파리_로고합성.jpeg" alt="product 7"></div>
-        <div class="product-card"><img src="1_페루_로고합성.jpeg" alt="product 8"></div>
-        <div class="product-card"><img src="1_플로리다_로고합성.jpg" alt="product 9"></div>
-        <div class="product-card"><img src="1_하와이_로고합성.jpg" alt="product 10"></div>
+        <svg class="product-card" viewBox="0 0 1 1" preserveAspectRatio="xMidYMid slice">
+          <image href="1_수상가옥_로고합성.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
+        <svg class="product-card" viewBox="0 0 1 1">
+          <image href="1_영국_로고합성.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
+        <svg class="product-card" viewBox="0 0 1 1">
+          <image href="1_우유니_로고합성.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
+        <svg class="product-card" viewBox="0 0 1 1">
+          <image href="1_이탈리아_로고합성.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
+        <svg class="product-card" viewBox="0 0 1 1">
+          <image href="1_일본_로고합성.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
+        <svg class="product-card" viewBox="0 0 1 1">
+          <image href="1_제주_로고합성.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
+        <svg class="product-card" viewBox="0 0 1 1">
+          <image href="1_파리_로고합성.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
+        <svg class="product-card" viewBox="0 0 1 1">
+          <image href="1_페루_로고합성.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
+        <svg class="product-card" viewBox="0 0 1 1">
+          <image href="1_플로리다_로고합성.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
+        <svg class="product-card" viewBox="0 0 1 1">
+          <image href="1_하와이_로고합성.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
+        </svg>
       </div>
     </section>
 
