--- a/index.html
+++ b/index.html
@@ -57,34 +57,34 @@
 
   <div class="product-grid">
     <svg class="product-card" viewBox="0 0 1 1" preserveAspectRatio="xMidYMid slice">
-      <image href="product_01.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product1.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product_02.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product2.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product_03.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product3.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product_04.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product4.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product_05.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product5.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product_06.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product6.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product_07.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product7.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product_08.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product8.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product_09.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product9.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product_10.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product10.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
   </div>
 </section>
