--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <image href="product5.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product6.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product6.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
       <image href="product7.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
@@ -81,10 +81,10 @@
       <image href="product8.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product9.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product9.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
     <svg class="product-card" viewBox="0 0 1 1">
-      <image href="product10.jpg" width="1" height="1" clip-path="url(#clip-product)"/>
+      <image href="product10.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
     </svg>
   </div>
 </section>
