--- a/index.html
+++ b/index.html
@@ -41,16 +41,18 @@
       </nav>
     </header>
 
+<!-- TOP -->
 <section id="top" class="page">
   <div class="banner">
     <img src="banner.jpg" alt="banner" class="banner-image">
   </div>
 
+  <!-- 클리핑 마스크 정의 (최신 Illustrator 기반 Path) -->
   <svg width="0" height="0">
     <defs>
       <clipPath id="clip-product" clipPathUnits="objectBoundingBox">
-        <path d="M0.5,0 C0.75,0,1,0.25,1,0.5 C1,0.75,0.75,1,0.5,1 C0.25,1,0,0.75,0,0.5 C0,0.25,0.25,0,0.5,0 Z"
-              transform="matrix(1,0,0.25,1,0,0)" />
+        <!-- Illustrator 기반 경로를 objectBoundingBox에 맞춰 스케일링 필요 시 여기 보정 가능 -->
+        <path d="M0.0416,0.5C0.1517,0.2238,0.4475,0,0.7022,0S1.0,0.2238,0.8898,0.5c-0.1102,0.2762-0.4060,0.5-0.6606,0.5S-0.0685,0.7762,0.0416,0.5Z"/>
       </clipPath>
     </defs>
   </svg>
