--- a/index.html
+++ b/index.html
@@ -3,31 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>odr*anywere</title>
+  <title>odr*anywhere</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css" />
 </head>
 <body>
-  <!-- SVG clipPath 정의: Illustrator형 비정형 타원 -->
-  <svg width="0" height="0">
-    <defs>
-      <clipPath id="clip-product" clipPathUnits="objectBoundingBox">
-        <path d="M0.0416,0.5C0.1517,0.1385,0.4475,0,0.7026,0s0.3709,0.1385,0.2608,0.5c-0.1101,0.3615-0.4059,0.5-0.661,0.5S-0.0685,0.8615,0.0416,0.5Z"/>
-      </clipPath>
-    </defs>
-  </svg>
-
-  <!-- Intro Page -->
   <div id="intro">
     <div class="intro-video-wrapper">
-      <video id="introVideo">
+      <video id="introVideo" muted autoplay>
         <source src="logo animation.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
   </div>
 
-  <!-- Main -->
   <div id="main" style="display: none; opacity: 0;">
     <header>
       <nav class="nav-left">
@@ -41,46 +30,33 @@
       </nav>
     </header>
 
-    <!-- TOP -->
     <section id="top" class="page">
       <div class="banner">
         <img src="banner.jpg" alt="banner" class="banner-image">
       </div>
+
+      <svg width="0" height="0">
+        <defs>
+          <clipPath id="clip-product" clipPathUnits="objectBoundingBox">
+            <path d="M0.0416,0.5C0.0416,0.2545,0.2485,0.0417,0.4989,0.0417c0.2504,0,0.4595,0.2128,0.4595,0.4583c0,0.2455-0.2091,0.4583-0.4595,0.4583C0.2485,0.9583,0.0416,0.7455,0.0416,0.5z"/>
+          </clipPath>
+        </defs>
+      </svg>
+
       <div class="product-grid">
-        <svg class="product-card" viewBox="0 0 1 1" preserveAspectRatio="xMidYMid slice">
-          <image href="product1.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
-        <svg class="product-card" viewBox="0 0 1 1">
-          <image href="product2.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
-        <svg class="product-card" viewBox="0 0 1 1">
-          <image href="product3.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
-        <svg class="product-card" viewBox="0 0 1 1">
-          <image href="product4.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
-        <svg class="product-card" viewBox="0 0 1 1">
-          <image href="product5.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
-        <svg class="product-card" viewBox="0 0 1 1">
-          <image href="product6.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
-        <svg class="product-card" viewBox="0 0 1 1">
-          <image href="product7.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
-        <svg class="product-card" viewBox="0 0 1 1">
-          <image href="product8.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
-        <svg class="product-card" viewBox="0 0 1 1">
-          <image href="product9.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
-        <svg class="product-card" viewBox="0 0 1 1">
-          <image href="product10.jpeg" width="1" height="1" clip-path="url(#clip-product)"/>
-        </svg>
+        <div class="product-card" onclick="showDetail(1)"><img src="product1.jpeg" alt="product1"></div>
+        <div class="product-card" onclick="showDetail(2)"><img src="product2.jpeg" alt="product2"></div>
+        <div class="product-card" onclick="showDetail(3)"><img src="product3.jpeg" alt="product3"></div>
+        <div class="product-card" onclick="showDetail(4)"><img src="product4.jpeg" alt="product4"></div>
+        <div class="product-card" onclick="showDetail(5)"><img src="product5.jpeg" alt="product5"></div>
+        <div class="product-card" onclick="showDetail(6)"><img src="product6.jpeg" alt="product6"></div>
+        <div class="product-card" onclick="showDetail(7)"><img src="product7.jpeg" alt="product7"></div>
+        <div class="product-card" onclick="showDetail(8)"><img src="product8.jpeg" alt="product8"></div>
+        <div class="product-card" onclick="showDetail(9)"><img src="product9.jpeg" alt="product9"></div>
+        <div class="product-card" onclick="showDetail(10)"><img src="product10.jpeg" alt="product10"></div>
       </div>
     </section>
 
-    <!-- ABOUT -->
     <section id="about" class="page">
       <div class="about-hero">
         <img src="about-hero.jpg" alt="about hero" class="banner-image">
@@ -88,22 +64,11 @@
       <div class="about-content">
         <h3>CONCEPT</h3>
         <img src="logo-intro.png" alt="LEAP GRAVITY logo" class="about-logo">
-        <p class="ko">
-          ODR*는 “좋은 신발은 좋은 곳으로 데려다준다”는 믿음 아래,<br>
-          로컬의 특색을 현대적인 감각으로 재해석한 리미티드 슈즈 컬렉션을 선보입니다.<br>
-          신발은 단순한 소비를 넘어, 공간과 경험을 걷는 방식으로 확장됩니다.<br><br>
-          ODR*와 함께, 자유로운 당신은 어디로든 떠날 수 있습니다.
-        </p>
-        <p class="en">
-          ODR* is founded on the belief that good shoes take you good places.<br>
-          We present limited-edition footwear inspired by local identity, reimagined through a modern lens.<br>
-          Each pair moves beyond product—becoming a way to walk through space and story.<br><br>
-          With ODR*, your freedom takes you anywhere.
-        </p>
+        <p class="ko">ODR*는 “좋은 신발은 좋은 곳으로 데려다준다”는 믿음 아래,<br>로컬의 특색을 현대적인 감각으로 재해석한 리미티드 슈즈 컬렉션을 선보입니다.<br>신발은 단순한 소비를 넘어, 공간과 경험을 걷는 방식으로 확장됩니다.</p>
+        <p class="en">ODR* is founded on the belief that good shoes take you good places.<br>We present limited-edition footwear inspired by local identity, reimagined through a modern lens.<br>Each pair moves beyond product—becoming a way to walk through space and story.</p>
       </div>
     </section>
 
-    <!-- ACCOUNT -->
     <section id="account" class="page">
       <div class="login-box">
         <h2>LOGIN</h2>
@@ -118,12 +83,28 @@
       </div>
     </section>
 
-    <!-- CART -->
     <section id="cart" class="page">
       <div class="cart-box">
         <h2>CART</h2>
         <p>Your cart is empty</p>
         <button>SHOP OUR PRODUCTS</button>
+      </div>
+    </section>
+
+    <!-- Detail Page Placeholder -->
+    <section id="product-detail" class="page">
+      <div class="product-detail-container">
+        <div class="product-detail-left">
+          <img id="detail-image" src="" alt="">
+        </div>
+        <div class="product-detail-right">
+          <h2 id="detail-name">Product Name</h2>
+          <p id="detail-price">₩000,000</p>
+          <div class="sizes">
+            <span>22</span><span>23</span><span>24</span><span>25</span><span>26</span>
+          </div>
+          <button id="add-to-cart">ADD TO CART</button>
+        </div>
       </div>
     </section>
   </div>
