--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         <img src="banner.jpg" alt="banner" class="banner-image">
       </div>
 
+      <svg width="0" height="0">
+        <defs>
+          <clipPath id="clip-product" clipPathUnits="objectBoundingBox">
+            <path d="M0.0416,0.5C0.0416,0.2545,0.2485,0.0417,0.4989,0.0417c0.2504,0,0.4595,0.2128,0.4595,0.4583c0,0.2455-0.2091,0.4583-0.4595,0.4583C0.2485,0.9583,0.0416,0.7455,0.0416,0.5z"/>
+          </clipPath>
+        </defs>
+      </svg>
+
       <div class="product-grid">
         <div class="product-card" onclick="showDetail(1)"><img src="product1.jpeg" alt="product1"></div>
         <div class="product-card" onclick="showDetail(2)"><img src="product2.jpeg" alt="product2"></div>
@@ -83,7 +91,7 @@
       </div>
     </section>
 
-    <!-- Detail Page Placeholder -->
+    <!-- Detail Page -->
     <section id="product-detail" class="page">
       <div class="product-detail-container">
         <div class="product-detail-left">
