--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <section id="account" class="page">
       <div class="login-box">
         <h2>LOGIN</h2>
-        <p>Enter your email and password to login:</p>
-        <input type="email" placeholder="E-mail">
+        <p>Enter your ID and password to login:</p>
+        <input type="text" placeholder="ID">
         <div class="password-wrap">
           <input type="password" placeholder="Password">
           <a href="#">Forgot your password?</a>
@@ -87,11 +87,10 @@
       <div class="cart-box">
         <h2>CART</h2>
         <p>Your cart is empty</p>
-        <button>SHOP OUR PRODUCTS</button>
+        <button onclick="showPage('top')">SHOP OUR PRODUCTS</button>
       </div>
     </section>
 
-    <!-- Detail Page -->
     <section id="product-detail" class="page">
       <div class="product-detail-container">
         <div class="product-detail-left">
